--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
-/*  your css code here. If applicable */
+body {
+			background-color: #cccccc;
+		}
+		.player_one{
+			background-color:white;
+			border:5px black;
+			height:100px; 
+		}
+		.player_two {
+			margin-top: 20px;
+			text-align: center;
+		}
+		
+		.player_two video {
+			width: 600px;
+			height: 400px;
+			border-radius: 5px;
+			box-shadow: 0px 0px 5px #aaaaaa;
+		}
+		.player_mp3 {
+			margin-top: 20px;
+			text-align: center;
+		}
+			.player_mp3 audio {
+			width: 600px;
+			height: 50px;
+			border-radius: 5px;
+			box-shadow: 0px 0px 5px #aaaaaa;
+		} 
+     .my{
+		 text-align:center; 
+	 }
