--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ body {
 			height:130px; 
 			border:1px solid black; 
 		}
+a{ 
+	text-decoration:none;
+}
+.li{
+	  list-style:none; 
+}
 	.my{
 		text-align:center; 
 	}
